syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message SumRequest{
    int32 numA = 1;
    int32 numB = 2;
}

message SumResponse {
    int32 Result = 1;
}

message PrimeNumberDecompositionRequest{
    int32 input = 1;
}

message PrimeNumberDecompositionResponse{
    int32 result = 1;
}

message ComputeAverageRequest{
    double input = 1;
}

message ComputeAverageResponse{
    double result = 1;
}

message FindMaximumRequest{
    int32 input = 1;
}

message FindMaximumResponse{
    int32 result = 1;
}


service CalculatorService{
    rpc Sum (SumRequest) returns (SumResponse){};
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse){};
    rpc FindMaximum (stream FindMaximumRequest) returns (stream FindMaximumResponse){};
}